# rust_kratos

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  rustfmt.toml
config/app/: development.toml  docker_local.toml
src/: lib.rs  main.rs
src/application/bootstrap/: init.rs
src/application/commands/: mod.rs
src/application/commands/account/: recovery.rs  settings.rs  verification.rs
src/application/commands/auth/: login.rs  logout.rs
src/application/commands/identity/: register.rs
src/application/queries/: get_current_user.rs  mod.rs
src/domain/: errors.rs  mod.rs
src/domain/entities/: user_profile.rs
src/domain/ports/inbound/: login.rs  recovery.rs  registration.rs  settings.rs  verification.rs
src/domain/ports/outbound/: identity.rs  session.rs
src/domain/value_objects/: auth_method.rs  flow_id.rs  session_cookie.rs
src/infrastructure/adapters/: mod.rs
src/infrastructure/adapters/cache/: redis_cache.rs
src/infrastructure/adapters/http/: mod.rs  server.rs  swagger-dark.html  swagger.rs
src/infrastructure/adapters/http/cookies/: mod.rs
src/infrastructure/adapters/http/docs/: swagger-dark.html  swagger.rs
src/infrastructure/adapters/kratos/: client.rs
src/infrastructure/adapters/kratos/http/: flows.rs  identity.rs  login.rs  logout.rs  recovery.rs  register.rs  settings.rs  verification.rs
src/infrastructure/adapters/kratos/models/: flows.rs  identity.rs  login.rs
src/infrastructure/di/: adapter_factory.rs  container.rs  factory.rs
src/presentation/api/rest/: mod.rs
src/presentation/api/rest/middleware/: cookies.rs
src/presentation/api/rest/v1/: mod.rs
src/presentation/api/rest/v1/dto/: auth.rs
src/presentation/api/rest/v1/handlers/: current_user.rs  login.rs  logout.rs  mod.rs  recovery.rs  register.rs  settings.rs  utils.rs  verification.rs
src/presentation/api/rest/v1/schema/: auth.rs
src/startup/: config.rs  init.rs  mod.rs  tracing.rs
tests/common/: mod.rs
tests/e2e/: recovery_test.rs
tests/integration/: kratos_auth_test.rs  kratos_identity_test.rs  kratos_recovery_test.rs  kratos_registration_test.rs  kratos_session_test.rs  usecases_test.rs
