[package]
name = "rust_kratos"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.44" }
tracing-actix-web = "0.7.21"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
anyhow = "1.0"
serde_json = { version = "1.0.149" }
async-trait = { version = "0.1.89" }
reqwest = { version = "0.13.2", features = ["json", "cookies"] }
config = "0.15.22"
actix-web-prometheus = "0.1.2"
dotenvy = "0.15"
redis = { version = "1.1.0", features = ["tokio-comp", "connection-manager"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }

[[test]]
name = "integration"
path = "tests/lib.rs"


[dev-dependencies]
uuid = { version = "1.22.0", features = ["v4"] }

[features]
default = []
